--- a/package.json
+++ b/package.json
@@ -16,15 +16,14 @@
     "react-icons": "^5.3.0",
     "sonner": "^1.5.0",
     "three": "^0.168.0",
+    "three-stdlib": "^2.32.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "export": "next export",
-    "deploy": "npm run build && npm run export && gh-pages -d out"
+    "lint": "next lint"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
